--- a/app/views/images/create.js.erb
+++ b/app/views/images/create.js.erb
@@ -1,6 +1,7 @@
 <% if @image.new_record? %>
   feedfiction.alert("Failed to upload image: <%= j @image.errors.full_messages.join(', ').html_safe %>");
 <% else %>
+  $("#upload-component").html("<%= j render('images/uploader') %>");
   $("#images").html("<%= j render(@image) %>");
   $('#story_image_id').val('<%=@image.id%>');
 <% end %>
