--- a/app/views/images/facebook.html.erb
+++ b/app/views/images/facebook.html.erb
@@ -3,7 +3,7 @@
 	<ul id="tiles" class="unstyled">
 		<% @images.each do |image|%>
 			<li class="story-box container-ss">
-				<%=  image_tag(image.url , width: image.width.to_s+'px' , height: image.height.to_s+'px', id: 'image_'+image.id.to_s)  %>
+				<%=  image_tag(image.image_source , width: image.width.to_s+'px' , height: image.height.to_s+'px', id: 'image_'+image.id.to_s)  %>
 				<div class="tiels-items-container">
 					<a class="btn btn-small"><i class="icon-edit"></i>Start Story</a>		
 				</div>
