--- a/app/views/images/upload.html.erb
+++ b/app/views/images/upload.html.erb
@@ -1,17 +1,15 @@
-<%= direct_upload_form_for @uploader do |f| %> 
+<!-- <%#= direct_upload_form_for @uploader do |f| %> 
   <p>
-    <%= f.file_field :image_source %> 
+    <%#= f.file_field :image_source %> 
   </p>
   <p>
-  	<%= f.button %> 
+  	<%#= f.button %> 
   </p>
   
-<% end %>
-
-<%= s3_uploader_form post: images_url, as: "image[image_thumb]" do %>
-  <%= file_field_tag :file %>
-<% end %>
-
+<%# end %> -->
+<div id="upload-component">
+	<%= render 'images/uploader'%>
+</div>
 <%# form_for Image.new do |f| %>
  <%#= f.file_field :image_source %>
  <%#= f.submit %>
