--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,6 @@
         <%= render 'stories/upload_modal' %>
       </div>
     <%end%>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
