--- a/app/views/images/instagram.html.erb
+++ b/app/views/images/instagram.html.erb
@@ -1,2 +1,2 @@
-<h1>ImportImages#instagram</h1>
-<p>Find me in app/views/import_images/instagram.html.erb</p>
+<h1>Please start your story from Instagram</h1>
+<%= render 'images/photos' %>
