--- a/app/assets/stylesheets/stories.css.scss
+++ b/app/assets/stylesheets/stories.css.scss
@@ -6,12 +6,12 @@ section.story-page {
 	width:940px;
 	margin:0 auto;
 
-	&img{
+	img{
 		display: block;
 		margin:0 auto;
 	}
 
-	&h1{
+	h1{
 		font-size:86px;
 		font-weight: 400;
 		padding: 30px 0;
