--- a/app/views/layouts/_image_provider.html.erb
+++ b/app/views/layouts/_image_provider.html.erb
@@ -4,5 +4,6 @@
                     <div class="span"><%# link_to image_tag('logos/upload_image.jpg'),'#UploadModal' ,data: { function: 'modal' , dismiss: 'modal'}, class: 'userFunction' %>
                     	<%= link_to image_tag('logos/upload_image.jpg'),'#UploadModal' ,data: { function: 'displayUpload' , dismiss: 'modal'}, class: 'userFunction' %>
                     </div>
+                    <div class="span"><%= link_to image_tag('logos/instagram_logo.jpg'),in_wizard ? import_facebook_wizard_url : instagram_url %></div>
                  
                 </div>
