--- a/app/views/layouts/_image_provider.html.erb
+++ b/app/views/layouts/_image_provider.html.erb
@@ -1,7 +1,7 @@
 				<div class="row logo-images show-grid">
                   
                     <div class="span"><%= link_to image_tag('logos/facebook_logo.jpg'),in_wizard ? import_facebook_wizard_url : facebook_path %></div>
-                    <div class="span"><%# link_to image_tag('logos/upload_image.jpg'),'#UploadModal' ,data: { function: 'modal' , dismiss: 'modal'}, class: 'userFunction' %>
+                    <div class="span">
                     	<%= link_to image_tag('logos/upload_image.jpg'),'#UploadModal' ,data: { function: 'displayUpload' , dismiss: 'modal'}, class: 'userFunction' %>
                     </div>
                     <div class="span"><%= link_to image_tag('logos/instagram_logo.jpg'),in_wizard ? import_facebook_wizard_url : instagram_url %></div>
