--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -12,4 +12,12 @@
                 <!--<a href="#" class="btn btn-primary">Save changes</a>-->
               </div>
       </div>
+      <div class="modal hide" id="start-story">
+        <div class="modal-header lg">
+          <button type="button" class="close" data-dismiss="modal">×</button>
+          <h2>Start A Story</h2>
+        </div>
+        <div id="start-story-container"></div>
+         
+      </div>
       
