--- a/app/views/stories/_started_by.html.erb
+++ b/app/views/stories/_started_by.html.erb
@@ -1,4 +1,3 @@
-<div>
-	Started <%= time_ago_in_words story.created_at%> ago By: <%= link_to story.user.name , story.user  %> from Facebook
-</div>
+<div><%= started_by(story)%></div>
+	
 				
