added staging env

--- a/app/views/stories/_story_item.html.erb
+++ b/app/views/stories/_story_item.html.erb
@@ -17,10 +17,10 @@
 				</div>
 				<hr/>
 				<div>
-					<%= link_to_if(current_user, "Flag", new_flag_url(:story_id => story.id), :remote => true, 'data-toggle' => 'modal' ,:class => "btn btn-danger" , 'data-target' => "#flag-#{story.id}") do
- 						link_to("Flag" ,'#' ,:class => "btn btn-danger unregister")
- 					end
- 					%>
+					<% if current_user && @in_story_page %>
+						<%= link_to_if(current_user && @in_story_page, "Flag", new_flag_url(:story_id => story.id), :remote => true, 'data-toggle' => 'modal' ,:class => "btn btn-danger" , 'data-target' => "#flag-#{story.id}") 
+	 					%>
+	 				<% end %>
  					<div id="flag-<%=story.id%>" class="modal hide fade flag-container"></div>
 				<% unless story.is_complete%>
 					<div>
