--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -2,7 +2,7 @@
     <% if current_user %>
       <div class="commenter-avatar"><%= basic_avatar(current_user) %></div>
     <%end%>
-	<%= form_for(@comment , remote: true) do |f| %>
+	<%= form_for(Comment.new , remote: true) do |f| %>
 	  	<%if story.nil? %>
 	  		<%= f.hidden_field :story_id%>
 	  	<% else%>
