--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -279,6 +279,10 @@ textarea ,input[type=text] {
 	  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
 	     -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
 	          box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+
+	  li a {
+	  	color: #000;
+	  }
 	}
 }
 
