--- a/app/views/users/show_likes.html.erb
+++ b/app/views/users/show_likes.html.erb
@@ -1,7 +1,12 @@
 <% provide(:title, @title) %>
-<section>
+<section id="user-header">
   <%= render 'user_header' %>
 </section>
 <section>
+	<% if @stories.count>0 %>
+	<h2><%= @user.name %> likes the stories:</h2>
 	<%= render 'feeds/feed' %>
+	<%else%>
+	<h2><%= @user.name %> dosen't like yet</h2>
+	<%end%>
 </section>
