--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -146,6 +146,7 @@ textarea ,input[type=text] {
 
 	&:hover {
 		box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+		background-color: #efefef;
 		div.story-header h1{
 			background-color: #000;
 		}
