--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -3,14 +3,10 @@
 		<div class="span4">
 			<h1>FeedFiction</h1>
 			<div class="lead">
-			<p>
-			Feed Fiction is a social platform that provides a way to turn photo feed into 55 words short stories. Upload a photo, write, interact and your photos would become great stories.</p>
-
-			<p>It’s fun, easy and for everyone!</p>
-			 
-			<strong>Join now!</strong>
+			<%= render 'static_pages/about'%>
+						
 			</div>
-			<button class="btn btn-large btn-primary sign-in" type="button">Sign up now!</button>
+			<button class="btn btn-large btn-primary sign-in" type="button">Join now!</button>
 		</div>
 		<div class="span8">
 			<div id="myCarousel" class="carousel slide">
