--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,5 +1,15 @@
-<h1><%= @user.name%> - Welcome to FeedFiction We're happy you joined us.</h1>
+<h1>Welcome to FeedFiction!</h1>
+<p>Dear <%= @user.name%>,</p>
+<p>
+Thank you for signing up with us and welcome aboard!
+<%= link_to 'Log in', root_url %> to start uploading your photos and writing stories.</p>
+<p>
+If you have questions or suggestions, send us a quick note by replying to this email. 
+We look forward to reading your stories and hearing your feedback
+</p>
 
-<p>The Feedfiction team</p>
+Feed the Fiction!
 
+Yours truly, 
+<strong>The FeedFiction Team</strong>
 
