--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,14 +18,7 @@
                 </li>
               <%end%>
               <li><a  data-toggle="modal" href="#StartStoryModal">Start Story</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  About <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <%= render 'layouts/footer_menu'%>
-                </ul>
-              </li>
+              <%= render 'layouts/about_dd_menu' %>
               <li class="divider-vertical"></li>
                <li id="fat-menu" class="dropdown">
 
@@ -43,7 +36,8 @@
               
               
           <% else %>
-              
+              <%= render 'layouts/about_dd_menu' %>
+              <li class="divider-vertical"></li>
               <li><a href class="sign-in">Sign in with Facebook</a>
 
           <% end %>
