fix some texts & registration

--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -12,7 +12,7 @@
 	  
 	  <% if current_user%>
 		  <div class="actions">
-		    <%= f.submit :disable_with => 'Please wait...' , :disabled => true %>
+		    <%= f.submit 'Comment' ,disable_with: 'Please wait...' ,disabled: true %>
 		  </div>
 	  <% end %>
 	<% end %>
