--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
                     </a>
                 </li>
               <%end%>
-              <li><a  data-toggle="modal" href="#StartStoryModal">Start Story</a></li>
+              <li><a  data-toggle="modal" href="#StartStoryModal">Start a story</a></li>
               <%= render 'layouts/about_dd_menu' %>
               <li class="divider-vertical"></li>
                <li id="fat-menu" class="dropdown">
