--- a/app/views/layouts/register.html.erb
+++ b/app/views/layouts/register.html.erb
@@ -27,5 +27,9 @@
       <%= render 'stories/start_story_modal' %>
     </div>
     <div id="like-modal" class="modal hide"></div>
+    <div id="start-story-form" class="hide" >
+      <%= render 'images/start_story' %>
+    </div>
+
   </body>
 </html>
