--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,4 +1,4 @@
-<%= full_title(@story_title)%>
+<% provide(:title ,@story.story_title)%>
 <% content_for :head do %>
 	<script type="text/javascript">var switchTo5x=true;</script>
 	<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
