fixed second navigation

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,59 +1,55 @@
 <header class="navbar navbar-fixed-top navbar-static-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <%= link_to  content_tag(:span ,'feed') + 'fiction', root_path, id: "logo" , class: "brand logo" %>
-     
-      <nav>
-        <ul class="nav pull-right">
-          
-          <% if current_user %>
-              <% if current_user.has_notification? %>
-                <li><a href='<%= notifications_show_url%>'>
-                    <%if current_user.new_notifications_count==0%>
-                      <span class="badge">&nbsp;</span>
-                    <%else%>
-                      <span class="badge badge-warning"><%=current_user.new_notifications_count%></span>
-                    <% end %>
-                    </a>
-                </li>
-              <%end%>
-              <li><a  data-toggle="modal" href="#StartStoryModal">Start a story</a></li>
-              <%= render 'layouts/about_dd_menu' %>
-              <li class="divider-vertical"></li>
-               <li id="fat-menu" class="dropdown">
-
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                   <%= image_tag(current_user.avatar,:class => 'image_header_avatar')  %> <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "Profile", '#' %></li>
-                  <li><%= link_to "Settings", '#' %></li>
-                  <li class="divider"></li>
-                  <li><%= link_to "Sign out", signout_path %></li>
+  <div>
+    <div class="navbar-inner">
+      <div class="container">
+        <%= link_to  content_tag(:span ,'feed') + 'fiction', root_path, id: "logo" , class: "brand logo" %>
+       
+        <nav>
+          <ul class="nav pull-right">
+            
+            <% if current_user %>
+                <% if current_user.has_notification? %>
+                  <li><a href='<%= notifications_show_url%>'>
+                      <%if current_user.new_notifications_count==0%>
+                        <span class="badge">&nbsp;</span>
+                      <%else%>
+                        <span class="badge badge-warning"><%=current_user.new_notifications_count%></span>
+                      <% end %>
+                      </a>
                   </li>
-                </ul>
-              </li>
-              
-              
-          <% else %>
-              <%= render 'layouts/about_dd_menu' %>
-              <li class="divider-vertical"></li>
-              <li><a href class="sign-in">Sign in with Facebook</a>
+                <%end%>
+                <li><a  data-toggle="modal" href="#StartStoryModal">Start a story</a></li>
+                <%= render 'layouts/about_dd_menu' %>
+                <li class="divider-vertical"></li>
+                 <li id="fat-menu" class="dropdown">
 
-          <% end %>
-        </ul>
-      </nav>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                     <%= image_tag(current_user.avatar,:class => 'image_header_avatar')  %> <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to "Profile", '#' %></li>
+                    <li><%= link_to "Settings", '#' %></li>
+                    <li class="divider"></li>
+                    <li><%= link_to "Sign out", signout_path %></li>
+                    </li>
+                  </ul>
+                </li>
+                
+                
+            <% else %>
+                <%= render 'layouts/about_dd_menu' %>
+                <li class="divider-vertical"></li>
+                <li><a href class="sign-in">Sign in with Facebook</a>
+
+            <% end %>
+          </ul>
+        </nav>
+      </div>
     </div>
   </div>
-  
+  <%= render 'layouts/second_navbar'%>
 </header>
-<ul class="nav nav-pills">
-    <li class="disabled"><a href="#">My Feed</a></li>
-    <li ><a href="#">Everything</a></li>
-    <li class="dropdown">
-      <%= drop_down_categories %>
-    </li>
-</ul>
+
 <% unless current_user%>
   <% unless @donot_show_disclaimer%>
     <div class="unlogin-disclaimer hero-unit">
