--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,10 +21,10 @@
                 <li><a  data-toggle="modal" href="#StartStoryModal">Start a story</a></li>
                 <%= render 'layouts/about_dd_menu' %>
                 <li class="divider-vertical"></li>
+                <li> <%= link_to image_tag(current_user.avatar,:class => 'image_header_avatar') , user_url(current_user)%></li>
                  <li id="fat-menu" class="dropdown">
-
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                     <%= image_tag(current_user.avatar,:class => 'image_header_avatar')  %> <b class="caret"></b>
+                     <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
                     <li><%= link_to "Profile", '#' %></li>
