--- a/app/views/users/_user_header.html.erb
+++ b/app/views/users/_user_header.html.erb
@@ -3,7 +3,7 @@
   <p><h3><%= @user.name %></h3></p>  
   
  
-  <%= render 'users/follow_form' if current_user %>
+  <%= render 'users/follow_form_header' if current_user %>
 
 
 <div class="navbar">
