--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,12 @@
       <div id="UploadModal" class="modal hide fade out">
         <%= render 'stories/upload_modal' %>
       </div>
-      
+    <%else%>
+      <div id="loginPreloader" class="modal hide fade">
+        <div class="modal-body">
+          <p>Logging you in…</p>
+        </div>
+      </div>
     <%end%>
     <%= debug(params) if Rails.env.development? %>
   </body>
