--- a/app/views/feeds/_feed.html.erb
+++ b/app/views/feeds/_feed.html.erb
@@ -1,6 +1,6 @@
-<div id="story-container">
-	<ul id="tiles">
-		<%= render :partial => 'stories/story' ,:collection => @stories%>
-	</ul>
+<div id="story-container" >
+	<div id="portfolio-wrapper" class="row">
+	<%= render :partial => 'stories/story' ,:collection => @stories%>
+	</div>
 </div>
 <%= will_paginate @stories%>
