--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,61 +1,94 @@
-<header class="navbar navbar-fixed-top navbar-static-top">
-  <div>
-    <div class="navbar-inner">
-      <div class="container">
-        <%= link_to  content_tag(:span ,'feed') + 'fiction', root_path, id: "logo" , class: "brand logo" %>
-       
-        <nav>
-          <ul class="nav pull-right">
-            
-            <% if current_user %>
-                <% if current_user.has_notification? %>
-                  <li><a href='<%= notifications_show_url%>'>
-                      <%if current_user.new_notifications_count==0%>
-                        <span class="badge">&nbsp;</span>
-                      <%else%>
-                        <span class="badge badge-warning"><%=current_user.new_notifications_count%></span>
-                      <% end %>
-                      </a>
-                  </li>
-                <%end%>
-                <li><a  data-toggle="modal" href="#StartStoryModal">Start a story</a></li>
-                <%= render 'layouts/about_dd_menu' %>
-                <li class="divider-vertical"></li>
-                <li> <%= link_to image_tag(current_user.avatar,:class => 'image_header_avatar') , user_url(current_user)%></li>
-                 <li id="fat-menu" class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                     <b class="caret"></b>
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><%= link_to "Profile", '#' %></li>
-                    <li><%= link_to "Settings", '#' %></li>
-                    <li class="divider"></li>
-                    <li><%= link_to "Sign out", signout_path %></li>
-                    </li>
-                  </ul>
-                </li>
-                
-                
-            <% else %>
-                <%= render 'layouts/about_dd_menu' %>
-                <li class="divider-vertical"></li>
-                <li><a href class="sign-in">Sign in with Facebook</a>
+<header>
+  <!--start: Container -->
+  <div class="container">
+    <!--start: Row -->
+    <div class="row">
+     <!--start: Logo -->
+      <div class="logo span3">
+        <i class="ico-charts circle"></i>
+<%= link_to  content_tag(:span ,'feed') + 'fiction', root_path, id: "logo" , class: "brand" %>
 
-            <% end %>
-          </ul>
-        </nav>
+        <!-- <a class="brand" href="#">Feed<span>fiction</span></a> -->
       </div>
+      <!--end: Logo -->
+        
+      <!--start: Navigation -->
+      <div class="span9">
+        <div class="navbar navbar-inverse">
+            <div class="navbar-inner">
+                  <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </a>
+                  <div class="nav-collapse collapse">
+                    <ul class="nav">
+                    <% if current_user %>
+                      <% if current_user.has_notification? %>
+                        <li><a href='<%= notifications_show_url%>'>
+                            <%if current_user.new_notifications_count==0%>
+                              <span class="badge">&nbsp;</span>
+                            <%else%>
+                              <span class="badge badge-warning"><%=current_user.new_notifications_count%></span>
+                            <% end %>
+                            </a>
+                        </li>
+                      <%end%>
+                      <li><a data-toggle="modal" href="#StartStoryModal">Start a story</a></li>
+                      <%= render 'layouts/about_dd_menu' %>
+                      <li> <%= link_to image_tag(current_user.avatar,:class => 'image_header_avatar') , user_url(current_user)%></li>
+                       <li id="fat-menu" class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                           <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><%= link_to "Profile", '#' %></li>
+                          <li><%= link_to "Settings", '#' %></li>
+                          <li class="divider"></li>
+                          <li><%= link_to "Sign out", signout_path %></li>
+                          </li>
+                        </ul>
+                      </li>
+                      
+                      
+                    <% else %>
+                      <%= render 'layouts/about_dd_menu' %>
+                      <li class="divider-vertical"></li>
+                      <li><a href class="sign-in">Sign in with Facebook</a>
+
+                    <% end %>
+
+
+
+                    </ul>
+                  </div>
+              </div>
+            </div>
+        
+      </div>  
+      <!--end: Navigation -->
+        
     </div>
+    <!--end: Row -->
+    <!-- <div class="row">
+      <%#= render 'layouts/second_navbar'%>
+    </div> -->
   </div>
-  <%= render 'layouts/second_navbar'%>
+  <!--end: Container-->     
+    
+
+
 </header>
+<!--end: Header-->
+
+
 
 <% unless current_user%>
-  <% unless @donot_show_disclaimer%>
-    <div class="unlogin-disclaimer hero-unit">
-      <p>Use Feedfiction to write stories alone or with friends</p>
-      <button class="btn btn-large btn-primary sign-in" type="button">Sign up</button>
-    </div>
-  <% end %>
+<% unless @donot_show_disclaimer%>
+  <div class="unlogin-disclaimer hero-unit">
+    <p>Use Feedfiction to write stories alone or with friends</p>
+    <button class="btn btn-large btn-primary sign-in" type="button">Sign up</button>
+  </div>
+<% end %>
 <% end %>
 
