--- a/app/views/stories/_inner_story.html.erb
+++ b/app/views/stories/_inner_story.html.erb
@@ -1,10 +1,37 @@
+					<div class="picture">
+						<%= link_to(story,{title: story.story_title}) do%>
+						<%=  image_tag(image_thumb(story.image))  %><div class="image-overlay-link"></div>
+						<figcaption class="thumbnail-title">
+			                <h3>
+			                  <span>Mary Doe</span>
+			                </h3>
+			                <p>
+			                  <span>Assistant director</span>
+			                </p>
+		              </figcaption>
+						<% end %>
+							<div class="item-description alt">
+								<%= render 'stories/started_by' , :story => story%>
+								<h5><a href="project.html">Project no. 5</a></h5>
+								<p>
+								Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+								</p>
+							</div>
+							<div class="post-meta">
+								<span><i class="mini-ico-calendar"></i>1 June 2011</span>
+								<span><i class="mini-ico-user"></i> <a href="#">lucas</a></span>
+								<span><i class="mini-ico-comment"></i><a href="#">89 comments</a></span>
+							</div>	
+					</div>
+
+
 				<div class="story-header">
 					<%= link_to (story) do%>
 					<h1><%= story.story_title%></h1>
 					<%=  image_tag(image_thumb(story.image) , width: number_to_pixel(story.image.width) , height: number_to_pixel(story.image.height))  %>
 					<% end %>
 				</div>
-				<%= render 'stories/started_by' , :story => story%>
+				
 				
 				
 				<!--<div class="tiels-items-container">
