--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -1,5 +1,5 @@
-		<li class="story-box continue-story" id="story-<%= story.id%>" >
+		<div class="span4 portfolio-item" id="story-<%= story.id%>" >
 			
 			<%= render 'stories/inner_story' , :story => story, :@comments => story.last_comments%>
 				
-		</li>
+		</div>
