--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -7,7 +7,7 @@
 				<h2>FeedFiction</h2>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 				<a href="#" class="da-link">Read more</a>
-				<div class="da-img"><img src="img/parallax-slider/twitter.png" alt="image01" /></div>
+				<div class="da-img"><img src="parallax-slider/twitter.png" alt="image01" /></div>
 			</div>
 			<div class="da-slide">
 				<h2>Enjoy & Fun</h2>
