--- a/app/assets/stylesheets/parallax-slider2.css
+++ b/app/assets/stylesheets/parallax-slider2.css
@@ -15,7 +15,7 @@
 	position: relative;
 	margin: 0 auto;
 	overflow: hidden;
-	background: transparent url(../img/slider.jpg) repeat 0% 0%;
+	background: transparent url('slider.jpg') repeat 0% 0%;
 	border-bottom: 5px solid #f6f6f6 !important;
 	-webkit-box-shadow: inset 0px 0px 5px rgba(0,0,0,.25);
 	-moz-box-shadow: inset 0px 0px 5px rgba(0,0,0,.25);
@@ -183,7 +183,7 @@
 	height: 20px;
 	top: 5px;
 	left: 5px;
-	background: transparent url(../img/arrows.png) no-repeat top left;
+	background: transparent url(arrows.png) no-repeat top left;
 	border-radius: 50%;
 	box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
