--- a/app/views/stories/_inner_story.html.erb
+++ b/app/views/stories/_inner_story.html.erb
@@ -1,4 +1,4 @@
-					<div>
+					<div class="story-item">
 						<div class="picture">
 						<%= link_to(story,{title: story.story_title}) do%>
 						<%=  image_tag(image_thumb(story.image))  %><div class="image-overlay-link"></div>
@@ -14,10 +14,8 @@
 						
 							<div class="item-description alt">
 								<%#= render 'stories/started_by' , :story => story%>
-								<h5 id="ttt"><%= story.story_title%></h5>
-								<p>
+								<h5><%= link_to story.story_title, story%></h5>
 								<%= render 'stories/story_item' , :story => story%>
-								</p>
 							</div>
 							<div class="post-meta">
 								<span><i class="mini-ico-calendar"></i>1 June 2011</span>
