--- a/app/views/stories/_story_item.html.erb
+++ b/app/views/stories/_story_item.html.erb
@@ -2,19 +2,18 @@
 				<div class="story-with-owners">
 					<div class="story-area">
 						<% story.story_lines.each_with_index do |line,index| %>
-						  		<span class="writer_<%=line.user.id%> <%= @is_user_page && @user.id==line.user_id ? 'emphasis' : ''  %>"><%= index==0 ? line.line.capitalize : sanitize(line.line.gsub(/\n/, '<br />'), :tags => %w(br)) %></span>
+						  		<span class="writer_<%=line.user.id%> <%= @is_user_page && @user.id==line.user_id ? 'emphasis' : ''  %>"><%= index==0 ? drop_cap(line.line) : sanitize(line.line.gsub(/\n/, '<br />'), :tags => %w(br)) %></span>
 						<% end %>
 						<span class="cs-canvas"></span>
 					</div>
 						
 					
-					<div class="post-meta">
-						<div>Feeders:</div>
-						<ul class="feeders">
+					<div class="post-meta writers clearfix">
+						<div class="feeders">Feeders:</div>
 						<% story.story_lines.map {|l| l.user}.uniq.each do |user| %>
-							<li class="writer_<%=user.id%>"><%=avatar_rounded(user) %></li>
+							<div class="writer writer_<%=user.id%>"><%=avatar_rounded(user) %></div>
 						<% end%>
-						</ul>
+						
 					</div>
 				</div>
 				<div>
@@ -24,26 +23,24 @@
 	 				<% end %>
  					<div id="flag-<%=story.id%>" class="modal hide fade flag-container"></div>
 				<% unless story.is_complete%>
-					<div>
-						<%= simple_form_for @story_line , html: {class: 'form-horizontal'},:remote => true  do |f| %>
-						
-						
-						
-						
+					<div class="continue-story-text-area">
+						<%= simple_form_for @story_line , html: {class: 'form-horizontal'}, remote: true  do |f| %>
 						
 						<%= f.hidden_field :order_id, value: story.story_lines.last.order_id if story.story_lines.present?%>
 						<%= f.hidden_field :story_id, value: story.id %>
-						<div class="continue-story-text-area">
-              <div>
-              <span class="counter-text"><%= add_how_many_words story.story_lines%> words left out of 55</span>
-              </div>
-              <%= avatar_rounded(current_user) if current_user %>
-              <div class="">
-  							<textarea limit='<%= add_how_many_words story.story_lines%>' <%= 'unlogged="t"' unless current_user%> name="story_line[line]"  placeholder='Continue the story..'></textarea>
-
-  							<input type="submit" name="submit-story" value="submit" class="btn pull-right" disabled/>
-              </div>
-						</div>
+						<!-- <div class="continue-story-text-area"> -->
+			              <div>
+			              <span class="counter-text"><%= add_how_many_words story.story_lines%> words left out of 55</span>
+			              </div>
+			              <%= avatar_rounded(current_user) if current_user %>
+			              <div class="textarea-with-button">
+	              			<textarea limit='<%= add_how_many_words story.story_lines%>' <%= 'unlogged="t"' unless current_user%> name="story_line[line]"  placeholder='Continue the story..'></textarea>
+			  							
+			  							<div>
+			  							<input type="submit" name="submit-story" value="submit" class="btn btn-small" disabled/>
+			  							</div>
+			              </div>
+						<!-- </div> -->
 						<span id="continue-error" class="error-message"></span>
 						
 						<%end%>
@@ -60,11 +57,11 @@
 				<% if story.is_complete %>
 				    <h3>Comments:</h3>
 				    <div id="comments-<%=story.id%>" class="comments">
-				      <div class="comments-container">
+				      <ul class="commentlist">
 				        <% unless story.comments.empty? %>
 				          <%= render 'comments/show' %>
 				        <% end  %>
-				      </div>
+				      </ul>
 				       <%= render 'comments/new' , :@comment => @new_comment, :story => story %>
 				    </div> 
 			  	<% end %>		
